// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Latency with a basic license when data is loaded time comparison returns some data 1`] = `
Array [
  Object {
    "x": 1627886820000,
    "y": 32492.3333333333,
  },
  Object {
    "x": 1627886880000,
    "y": 15225.6666666667,
  },
  Object {
    "x": 1627886940000,
    "y": 20229,
  },
  Object {
    "x": 1627887000000,
    "y": 31316.3333333333,
  },
  Object {
    "x": 1627887060000,
    "y": 100951,
  },
  Object {
    "x": 1627887120000,
    "y": 16895,
  },
  Object {
    "x": 1627887180000,
    "y": 22665.6666666667,
  },
  Object {
    "x": 1627887240000,
    "y": 13055,
  },
  Object {
    "x": 1627887300000,
    "y": 13611,
  },
  Object {
    "x": 1627887360000,
    "y": 27506.2,
  },
  Object {
    "x": 1627887420000,
    "y": 29941.8571428571,
  },
  Object {
    "x": 1627887480000,
    "y": 66111,
  },
  Object {
    "x": 1627887540000,
    "y": 43048.1428571429,
  },
  Object {
    "x": 1627887600000,
    "y": 15775.8888888889,
  },
  Object {
    "x": 1627887660000,
    "y": 16396.3333333333,
  },
]
`;

exports[`APM API tests basic apm_8.0.0 Latency with a basic license when data is loaded time comparison returns some data 2`] = `
Array [
  Object {
    "x": 1627886820000,
    "y": 43301.4,
  },
  Object {
    "x": 1627886880000,
    "y": 7717.4,
  },
  Object {
    "x": 1627886940000,
    "y": 27775,
  },
  Object {
    "x": 1627887000000,
    "y": 49293.8571428571,
  },
  Object {
    "x": 1627887060000,
    "y": 17266.2,
  },
  Object {
    "x": 1627887120000,
    "y": 9387,
  },
  Object {
    "x": 1627887180000,
    "y": 7103,
  },
  Object {
    "x": 1627887240000,
    "y": 31555.8,
  },
  Object {
    "x": 1627887300000,
    "y": 24241.2857142857,
  },
  Object {
    "x": 1627887360000,
    "y": 29307.8,
  },
  Object {
    "x": 1627887420000,
    "y": 14464.1428571429,
  },
  Object {
    "x": 1627887480000,
    "y": 16768.7777777778,
  },
  Object {
    "x": 1627887540000,
    "y": 15551,
  },
  Object {
    "x": 1627887600000,
    "y": 15336.1428571429,
  },
  Object {
    "x": 1627887660000,
    "y": 29285.4,
  },
]
`;

exports[`APM API tests trial apm_8.0.0 Transaction latency with a trial license when data is loaded with environment selected should return a non-empty anomaly series 1`] = `
Array [
  Object {
    "x": 1627886700000,
    "y": 75047.3242596733,
    "y0": 24247.2604757306,
  },
  Object {
    "x": 1627887600000,
    "y": 76811.830008433,
    "y0": 23985.9383183214,
  },
]
`;
